# Ai-Agents-Kaggle-Bootcamp

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.templates/mini-project-template/: README.md  pyproject.toml  requirements.txt
.templates/mini-project-template/src/: main.py
ai-foundry-sdk/: README.md  aifoundry_conn.ipynb
day-1/: assignment.ipynb  day-1a-from-prompt-to-action.ipynb
day-2/: assignment.ipynb
day-3/: assignment.ipynb
day-4/: assignment.ipynb
day-5/: assignment.ipynb
example-project/: README.md  pyproject.toml
example-project/src/: main.py
streamlit-chat-app/: .env.example  README.md  requirements-streamlit.txt  setup.sh
streamlit-chat-app/src/: chat.py
