[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Python Notebooks - AdHoc Mini-Projects with shared Poetry environment"
authors = ["Hamza Bendemra <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.6"
pandas = "^2.3.3"
notebook = "^7.4.7"
azure-ai-projects = "^1.0.0"
azure-identity = "^1.25.1"
python-dotenv = "^1.1.1"
openai = "^2.3.0"
streamlit = "^1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true