[tool.poetry]
name = "ai-agents-kaggle-bootcamp"
version = "0.1.0"
description = "Kaggle's 5-Day Bootcamp about AI Agents"
authors = ["Hamza Bendemra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipykernel = "^6.25.0"
openai = "^1.0.0"
google-generativeai = "^0.3.0"
kaggle = "^1.5.16"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"
matplotlib = "^3.7.0"
plotly = "^5.17.0"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.0"
black = "^23.0.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
