[tool.poetry]
name = "ai-agents-kaggle-bootcamp"
version = "0.1.0"
description = ""
authors = ["Hamza B <h.bendemra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.4.7"
openai = "^2.7.2"
google-adk = "^1.18.0"
ipython = "^9.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
